fix(): path deploy yarn build

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,4 +13,6 @@ jobs:
         with:
           node-version: 8
       - run: npm install -g surge
-      - run: surge ./ ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
+      - run: npm install -g yarn
+      - run: yarn run build
+      - run: surge public ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
